--- a/.htaccess
+++ b/.htaccess
@@ -3,3 +3,5 @@ RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-l
 RewriteRule .* /entry.php [L]
+
+php_value upload_max_filesize 12M
