--- a/.htaccess
+++ b/.htaccess
@@ -1,9 +1,11 @@
+php_value upload_max_filesize 12M
+php_value session.gc_maxlifetime 864000
+php_value magic_quotes_gpc Off
+
 RewriteEngine On
+
+RewriteRule ^/static/st/(.+)$ /static/s/%{HTTP_HOST}/$1 [C]
 
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-l
 RewriteRule .* /entry.php [L]
-
-php_value upload_max_filesize 12M
-php_value session.gc_maxlifetime 864000
-php_value magic_quotes_gpc Off
