--- a/.htaccess
+++ b/.htaccess
@@ -1,10 +1,12 @@
+Options -Indexes
+
 php_value upload_max_filesize 12M
 php_value session.gc_maxlifetime 864000
 php_value magic_quotes_gpc Off
 
 RewriteEngine On
 
-RewriteRule ^/static/st/(.+)$ /static/s/%{HTTP_HOST}/$1 [C]
+RewriteRule ^/static/c/(.+)$ /static/s/%{HTTP_HOST}/$1
 
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-l
