Acl moved to Registry.conf

--- a/Apps/Ring/Conf/Registry.conf
+++ b/Apps/Ring/Conf/Registry.conf
@@ -9,6 +9,41 @@ class:
 	R_Mdl_User:
 		plugins:
 			O_OpenId_Provider_UserPlugin
+	R_Mdl_Site:
+		acl:
+			resourse:
+				field: type
+				value: 1
+				user-in:
+					field: owner
+					role: Site Owner
+				user-in:
+					field: owner_friends
+					role: Site Owner's Friend
+			resourse:
+				field: type
+				value: 2
+				user-in:
+					field: leader
+					role: Site Leader
+				user-in:
+					field: admins
+					role: Site Admin
+				user-in:
+					field: members
+					role: Site Member
+	R_Mdl_Comment:
+		acl:
+			user-in:
+				field: owner
+				role: Content Owner
+			delegate: root->site
+	R_Mdl_Site_Anonce:
+		acl:
+			user-in:
+				field: owner
+				role: Content Owner
+			delegate: site
 uses:
 	R_Mdl_Session
 classnames:
