--- a/Apps/Ring/Conf/Registry.conf
+++ b/Apps/Ring/Conf/Registry.conf
@@ -11,37 +11,26 @@ class:
 			O_OpenId_Provider_UserPlugin
 	R_Mdl_Site:
 		acl:
-			resourse:
-				field: type
-				value: 2
-				user-in:
-					field: leader
+			resourse type=2:
+				user-in leader:
 					role: Site Leader
-				user-in:
-					field: admins
+				user-in admins:
 					role: Site Admin
-				user-in:
-					field: members
+				user-in members:
 					role: Site Member
-			resourse:
-				field: type
-				value: 1
-				user-in:
-					field: owner_friends
+			resourse type=1:
+				user-in owner_friends:
 					role: Site Owner's Friend
-				user-in:
-					field: owner
+				user-in owner:
 					role: Site Owner
 	R_Mdl_Comment:
 		acl:
-			user-in:
-				field: owner
+			user-in owner:
 				role: Content Owner
 			delegate: root->site
 	R_Mdl_Site_Anonce:
 		acl:
-			user-in:
-				field: owner
+			user-in owner:
 				role: Content Owner
 			delegate: site
 uses:
