--- a/Apps/Ring/Conf/Urls.conf
+++ b/Apps/Ring/Conf/Urls.conf
@@ -52,7 +52,7 @@ url openid/redirect:
 url openid/login:
 	plugin: -
 	command: OpenId_Login
-url openid/logout
+url openid/logout:
 	plugin: -
 	command: OpenId_Logout
 if plugin = Mr:
