--- a/Apps/Ring/Conf/Conditions.conf
+++ b/Apps/Ring/Conf/Conditions.conf
@@ -22,7 +22,7 @@ conditions:
 			db:
 				default:
 					engine: mysql
-					host: localhost
+					host: localhost:3306
 					dbname: ring
 					user: ring
 					password: XKSLzapa
