migrated to jQuery

--- a/Apps/Ring/Conf/Registry.conf
+++ b/Apps/Ring/Conf/Registry.conf
@@ -50,5 +50,6 @@ paginator:
 dao-params:
 	default_tail: ENGINE = InnoDB CHARACTER SET utf8 COLLATE utf8_general_ci
 js:
+	framework: JQuery
 	fckeditor:
 		config_path: /static/fckconfig.js
