Working with resources

--- a/Apps/Ring/Conf/Registry.conf
+++ b/Apps/Ring/Conf/Registry.conf
@@ -11,14 +11,14 @@ class:
 			O_OpenId_Provider_UserPlugin
 	R_Mdl_Site:
 		acl:
-			resourse type=2:
+			resource type=2:
 				user-in leader:
 					role: Site Leader
 				user-in admins:
 					role: Site Admin
 				user-in members:
 					role: Site Member
-			resourse type=1:
+			resource type=1:
 				user-in owner_friends:
 					role: Site Owner's Friend
 				user-in owner:
