Added" expetimentsl friends feed

--- a/Apps/Ring/Conf/Urls.conf
+++ b/Apps/Ring/Conf/Urls.conf
@@ -10,6 +10,14 @@ if mode = production:
 	host (www\.)?centralis\.name:
 		plugin: Ctr
 if plugin = Lf:
+	# Action pages -- not resources
+	url .*\..*:
+		url feed\.friends(\.page-([0-9]+))?:
+			registry paginator/page:
+				pocket: 2
+			command: Feed_Friends
+		url page\.collective:
+			command: Page_Collective
 	url comments(-([0-9]+))?:
 		registry paginator/page:
 			pocket: 2
