--- a/Apps/Ring/Conf/Urls.conf
+++ b/Apps/Ring/Conf/Urls.conf
@@ -12,7 +12,7 @@ if mode = production:
 if plugin = Lf:
 	# Action pages -- not resources
 	url .*\..*:
-		url feed\.friends(\.page-([0-9]+))?:
+		url friends\.feed(\.page-([0-9]+))?:
 			registry paginator/page:
 				pocket: 2
 			command: Feed_Friends
