--- a/Apps/Ring/Conf/Urls.conf
+++ b/Apps/Ring/Conf/Urls.conf
@@ -15,7 +15,7 @@ if plugin = Lf:
 		url friends\.feed(\.page-([0-9]+))?:
 			registry paginator/page:
 				pocket: 2
-			command: Feed_Friends
+			command: Friends_Feed
 		url page\.collective:
 			command: Page_Collective
 	url comments(-([0-9]+))?:
