Added: testing environment

--- a/Apps/Ring/Conf/Conditions.conf
+++ b/Apps/Ring/Conf/Conditions.conf
@@ -1,6 +1,17 @@
 prefix: R
 ext: phps
 conditions:
+	testing:
+		pattern:
+			host: tests\.utils\.mir\.io
+		registry:
+			db:
+				default:
+					engine: mysql
+					host: localhost:3306
+					dbname: ring_tests
+					user: ring_tests
+					password: XKSLzapa
 	development:
 		pattern:
 			host: ([^.]*)
