--- a/Apps/Ring/Conf/Conditions.conf
+++ b/Apps/Ring/Conf/Conditions.conf
@@ -11,7 +11,7 @@ conditions:
 					host: localhost:3306
 					dbname: ring_tests
 					user: ring_tests
-					password: XKSLzapa
+					password: fEQD10xv
 	development:
 		pattern:
 			host: ([^.]*)
