--- a/Apps/Ring/Conf/Urls.conf
+++ b/Apps/Ring/Conf/Urls.conf
@@ -34,6 +34,11 @@ if plugin = Lf:
 			pocket: 2
 	registry layout_class: R_Lf_Layout
 if plugin = Ctr:
+	url user/(.+)
+		registry current/user:
+			pocket: 1
+			call: R_Mdl_User::getByStringId
+		command: User_Profile
 	url Own/Msgs/Read-([0-9]+):
 		registry current/msg:
 			pocket: 1
