--- a/Apps/Ring/Conf/Urls.conf
+++ b/Apps/Ring/Conf/Urls.conf
@@ -34,7 +34,7 @@ if plugin = Lf:
 			pocket: 2
 	registry layout_class: R_Lf_Layout
 if plugin = Ctr:
-	url user/(.+)
+	url user/(.+):
 		registry current/user:
 			pocket: 1
 			call: R_Mdl_User::getByStringId
