--- a/Apps/Ring/Conf/Registry.conf
+++ b/Apps/Ring/Conf/Registry.conf
@@ -52,6 +52,6 @@ dao-params:
 	default_tail: ENGINE = InnoDB CHARACTER SET utf8 COLLATE utf8_general_ci
 js:
 	framework: Mootools
-	depender: http://js.utils.mir.io/moo-build?require=Om,R
+	depender: http://js.centralis.name/moo-build?require=Om,R
 	fckeditor:
 		config_path: /static/fckconfig.js
